# claude-code-statusline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  statusline.py
docs/: payload-schema.md  ultracode-detection.md
