[project]
name = "claude-code-statusline"
version = "1.0.0"
description = "A colourful, OKLCH-gradient Powerline-style status line for Claude Code."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "derDere" }]
keywords = ["claude-code", "statusline", "powerline", "oklch", "terminal"]
dependencies = ["coloraide>=4.0"]

# Console entry point -> lets `uvx` run the status line straight from the repo:
#   uvx --from git+https://github.com/derDere/claude-code-statusline.git claude-code-statusline
[project.scripts]
claude-code-statusline = "statusline:main"

[project.urls]
Homepage = "https://github.com/derDere/claude-code-statusline"
Repository = "https://github.com/derDere/claude-code-statusline.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single top-level module (statusline.py), not a package directory.
[tool.hatch.build.targets.wheel]
include = ["statusline.py"]
